Bug 641198 - Restart loop-once animations. r=joe